--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <li>
               <hr class="dropdown-divider">
             </li>
-            <li><a class="dropdown-item" target="_blank" href="http://10.46.12.19/info/ramais.html">Ramais</a>
+            <li><a class="dropdown-item" target="_blank" href="./ramais.html">Ramais</a>
             </li>
           </ul>
         </div>
