Alteração de texto no index.html, na descrição do container de Monitoramento

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           </div>
           <div>
             <h2>Monitoramento</h2>
-            <p>Servidores como OCS, Zabbix, VMWARE e outros.</p>
+            <p>Servidores como OCS, Zabbix, VMWARE...</p>
             <div class="btn-group dropend">
               <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown"
                 aria-expanded="false">Servidores</button>
