Inclusão do botão de voltar na página de ramais

--- a/ramais.html
+++ b/ramais.html
@@ -267,7 +267,15 @@
       </div>
     </div>
   </div>
-
+  <div class="row">
+    <div class="container">
+      <div class="d-grid offset-2 col-2">
+        <a href="http://10.46.12.19/info/" class="btn btn-outline-primary">
+          <i class="bi bi-arrow-left-circle-fill"></i>
+          <i>Voltar para o início</i></a>
+      </div>
+    </div>
+  </div>
 
   <!-- JavaScript Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
