Ajuste do botão de Voltar, na página ramais.html

--- a/ramais.html
+++ b/ramais.html
@@ -49,7 +49,7 @@
   </header>
 
   <div class="p-lg-1 mt-5">
-    <div class="container py-5">
+    <div class="container pt-5">
       <h1 class="display-5 fw-bold">Confira a lista dos ramais telefônicos:</h1>
       <hr>
       <div class="table-responsive shadow-lg">
@@ -267,9 +267,9 @@
       </div>
     </div>
   </div>
-  <div class="row">
-    <div class="container">
-      <div class="d-grid offset-2 col-2">
+  <div class="container">
+    <div class="row mt-2">
+      <div class="d-grid col-2">
         <a href="http://10.46.12.19/info/" class="btn btn-outline-primary">
           <i class="bi bi-arrow-left-circle-fill"></i>
           <i>Voltar para o início</i></a>
