--- a/ramais.html
+++ b/ramais.html
@@ -14,6 +14,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -269,10 +270,10 @@
   </div>
   <div class="container">
     <div class="row mt-2">
-      <div class="d-grid col-2">
+      <div class="d-flex col-2 localz">
         <a href="http://10.46.12.19/info/" class="btn btn-outline-primary">
           <i class="bi bi-arrow-left-circle-fill"></i>
-          <i>Voltar para o início</i></a>
+          <i>Voltar</i></a>
       </div>
     </div>
   </div>
