Corrigindo ortografia página de ramais.html

--- a/ramais.html
+++ b/ramais.html
@@ -239,7 +239,7 @@
               <td>Gisele</td>
             </tr>
             <tr class="table-warning text-center fw-bold" scope="row">
-              <td>informática</td>
+              <td>Informática</td>
               <td>69220</td>
               <td>João / Adriano</td>
             </tr>
