Modificando responsividade para tela de ceulares

--- a/ramais.html
+++ b/ramais.html
@@ -51,10 +51,10 @@
   </header>
 
   <div class="p-lg-1 mt-5">
-    <div class="container pt-5">
-      <div class="row d-flex align-items-center">
-        <h1 class="col-9 display-5 fw-bold">Confira a lista dos ramais telefônicos:</h1>
-        <div class="col-3 form">
+    <div class="container-sm container pt-5">
+      <div class="row align-items-center">
+        <h1 class="col-sm-2 col-xl-9 col-xxl-9 display-5 fw-bold">Confira a lista dos ramais telefônicos:</h1>
+        <div class="col-xxl-3 form">
           <!-- <label for="searchbar" class="form-label">Pesquise</label> -->
           <input type="search" name="search" id="searchbar" onkeyup="search_ramal()" class="form-control" placeholder="Busque aqui...">
         </div>
