--- a/ramais.html
+++ b/ramais.html
@@ -22,6 +22,10 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container-fluid mx-5">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
         <a class="navbar-brand" href="http://www.sudesb.ba.gov.br" target="_blank"><img src="./assets/Marca_Sudesb.jpg"
             alt="Logo da Sudesb" width="110px">
         </a>
@@ -46,6 +50,7 @@
             </li>
           </ul>
         </div>
+        </div>
       </div>
     </nav>
   </header>
@@ -53,7 +58,7 @@
   <div class="p-lg-1 mt-5">
     <div class="container-sm container pt-5">
       <div class="row align-items-center">
-        <h1 class="col-sm-2 col-xl-9 col-xxl-9 display-5 fw-bold">Confira a lista dos ramais telefônicos:</h1>
+        <h1 class="col-sm-2 col-xl-9 col-xxl-9 display-5 fw-bold">Confira a lista dos Ramais telefônicos:</h1>
         <div class="col-xxl-3 form">
           <!-- <label for="searchbar" class="form-label">Pesquise</label> -->
           <input type="search" name="search" id="searchbar" onkeyup="search_ramal()" class="form-control" placeholder="Busque aqui...">
