--- a/ramais.html
+++ b/ramais.html
@@ -22,36 +22,38 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container-fluid mx-5">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+        <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"
+          aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-        <a class="navbar-brand" href="http://www.sudesb.ba.gov.br" target="_blank"><img src="./assets/Marca_Sudesb.jpg"
-            alt="Logo da Sudesb" width="110px">
-        </a>
-        <!--Menu Navegação Links-->
-        <div class="dropdown pe-5 me-2">
-          <a class="btn btn-primary dropdown-toggle" role="button" id="dropdownMenuButton1" data-bs-toggle="dropdown"
-            aria-expanded="false">
-            Links Úteis
+        </button> -->
+        <!-- <div class="collapse navbar-collapse" id="navbarTogglerDemo01"> -->
+          <a class="navbar-brand" href="http://www.sudesb.ba.gov.br" target="_blank"><img
+              src="./assets/Marca_Sudesb.jpg" alt="Logo da Sudesb" width="110px">
           </a>
-          <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton1">
-            <li><a class="dropdown-item" target="_blank"
-                href="https://seibahia.ba.gov.br/sip/login.php?sigla_orgao_sistema=GOVBA&sigla_sistema=SEI">SEI</a></li>
-            <li><a class="dropdown-item" target="_blank" href="https://portaldefacilidades.ba.gov.br/#/">Prodeb</a></li>
-            <li><a class="dropdown-item" target="_blank" href="https://outlook.office.com/owa/">Email</a></li>
-            <li><a class="dropdown-item" target="_blank" href="https://rhbahia.ba.gov.br/login">Portal RH</a></li>
-            <li><a class="dropdown-item" target="_blank" href="https://dool.egba.ba.gov.br/">Diário Oficial</a></li>
-            <li><a class="dropdown-item" target="_blank" href="https://www.comprasnet.ba.gov.br/">Comprasnet</a></li>
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-            <li><a class="dropdown-item" target="_blank" href="./ramais.html">Ramais</a>
-            </li>
-          </ul>
+          <!--Menu Navegação Links-->
+          <div class="dropdown pe-5 me-2">
+            <a class="btn btn-primary dropdown-toggle" role="button" id="dropdownMenuButton1" data-bs-toggle="dropdown"
+              aria-expanded="false">
+              Links Úteis
+            </a>
+            <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton1">
+              <li><a class="dropdown-item" target="_blank"
+                  href="https://seibahia.ba.gov.br/sip/login.php?sigla_orgao_sistema=GOVBA&sigla_sistema=SEI">SEI</a>
+              </li>
+              <li><a class="dropdown-item" target="_blank" href="https://portaldefacilidades.ba.gov.br/#/">Prodeb</a>
+              </li>
+              <li><a class="dropdown-item" target="_blank" href="https://outlook.office.com/owa/">Email</a></li>
+              <li><a class="dropdown-item" target="_blank" href="https://rhbahia.ba.gov.br/login">Portal RH</a></li>
+              <li><a class="dropdown-item" target="_blank" href="https://dool.egba.ba.gov.br/">Diário Oficial</a></li>
+              <li><a class="dropdown-item" target="_blank" href="https://www.comprasnet.ba.gov.br/">Comprasnet</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" target="_blank" href="./ramais.html">Ramais</a>
+              </li>
+            </ul>
+          </div>
         </div>
-        </div>
-      </div>
     </nav>
   </header>
 
@@ -61,7 +63,8 @@
         <h1 class="col-sm-2 col-xl-9 col-xxl-9 display-5 fw-bold">Confira a lista dos Ramais telefônicos:</h1>
         <div class="col-xxl-3 form">
           <!-- <label for="searchbar" class="form-label">Pesquise</label> -->
-          <input type="search" name="search" id="searchbar" onkeyup="search_ramal()" class="form-control" placeholder="Busque aqui...">
+          <input type="search" name="search" id="searchbar" onkeyup="search_ramal()" class="form-control"
+            placeholder="Busque aqui...">
         </div>
       </div>
       <hr>
