Incluindo novo roteador na página wifi.html

--- a/assets/wifi.html
+++ b/assets/wifi.html
@@ -80,6 +80,9 @@
                 <div class="bi bi-router-fill">
                     <a href="http://10.46.12.1/" class="btn btn-success btn-lg" target="_blank">Reneval</a>
                 </div>
+                <div class="bi bi-router-fill">
+                    <a href="http://10.46.12.34/" class="btn btn-success btn-lg" target="_blank">Roteador Info</a>
+                </div>
             </div>
         </div>
     </div>
